--- a/app.json
+++ b/app.json
@@ -7,10 +7,10 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+   "splash": {
+      "image": "./assets/images/sp.png",  
+      "resizeMode": "contain",                  
+      "backgroundColor": "#FFA500"              
     },
     "ios": {
       "supportsTablet": true
